src/objects/Section_Group_Section_Relation__c.object
<CustomObject>
    <description>Used to support relationships between sections.</description>
    <fields>
        <fullName>Default_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this the default section for the group?</inlineHelpText>
        <label>Default Section?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Junction_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Junction External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this section active?</inlineHelpText>
        <label>Section Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Group__c</fullName>
        <description>Junction object to Section Group</description>
        <inlineHelpText>Section Group</inlineHelpText>
        <label>Section Group</label>
        <referenceTo>Section_Group__c</referenceTo>
        <relationshipLabel>Section Group Section Relation</relationshipLabel>
        <relationshipName>Section_Group_Relation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Section_Template__c</fullName>
        <description>Junction object to Section master detail</description>
        <inlineHelpText>Master is section</inlineHelpText>
        <label>Section Template</label>
        <referenceTo>Section_Template__c</referenceTo>
        <relationshipLabel>Section Group Section Relation</relationshipLabel>
        <relationshipName>Section_Template_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Section Group Section Relation</label>
    <nameField>
        <displayFormat>SGR-{0}  {MM}-{DD}-{YYYY}</displayFormat>
        <label>Section Group Section Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Group Section Relation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>